[package]
name = "TableDataMerge"
version = "2.0.0-rc.1"
edition = "2021"

[package.metadata.winres]
OriginalFilename = "tdm.exe"

[[bin]]
name = "tdm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2"
format_num = "0.1"
itertools = "0.10"
lazy_static = "1.4.0"
paris = "1.5.15"
regex = "1.8.1"
serde = "1"
serde_json = "1.0"
tabled = "0.12"

[dependencies.clap]
version = "4"
features = ["derive"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
